Button functionality changes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <meta name="viewport" content="initial-scale=1.0">
+    <link rel="shortcut icon" href="">
 </head>
 
 <body>
@@ -57,8 +58,10 @@
                 </form>
             </table>
             <p>¿Desea hacer otra operación?</p>
+            <div id="buttons">
                 <button type="submit" id="si">Sí</button>
                 <button type="submit" id="no">No</button>
+            </div>
         </div>
         
     <div id="answer"></div>
